--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button> Inutil também</button>
         <br>
         <br>
-         <a href="ttps://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="https://i.pinimg.com/564x/85/78/99/85789959ee31a7df60f4f6eb9ea59d55.jpg">Não clique em mim!!</a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="https://i.pinimg.com/564x/85/78/99/85789959ee31a7df60f4f6eb9ea59d55.jpg">Não clique em mim!!</a>
     
     </body>
 </html>
