--- a/index.html
+++ b/index.html
@@ -1,17 +1,74 @@
-<html>
-    <head>
-     <title> Hello my husband </title>   
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Hello my husband</title>
+</head>
+<body>
     </head>
-    <body>
-        <h1> Olá amigo</h1>
+    <body><div style="text-align:center">
+        <h1> Olá amigo!!👋</h1>
+    </div>
         <br>
-        <p> Pode atualizar a página por favor?</p>
-        <br>
-        <button> Butão Inutil</button>
-        <button> Inutil também</button>
-        <br>
-        <br>
-         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="https://i.pinimg.com/564x/85/78/99/85789959ee31a7df60f4f6eb9ea59d55.jpg">Não clique em mim!!</a>
+            <h3>Vamos jogar um jogo?</h3>
+        <P>Meio que não tem opção..sei que quer saber o que estou planejando.</P>
+        <h2> Regras</h2>
+        <ul>🐾Todos os quadrados vão ter algo</ul>
+        <ul>🐾Somente alguns deles vão ser úteis</ul>
+        <ul>🐾Tem o prazo de 20 minutos antes de perder o acesso ao site</ul>
+        <ul>🐾Terá direito a 3 dicas</ul>
+        
     
+        <br>
+        <br>
+        <br>
+        <img src="GATO.png">
+        <div>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50" ></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a><a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a><a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a><a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a><a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         </div>
     </body>
 </html>
