--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
         <ul>🐾Somente alguns deles vão ser úteis</ul>
         <ul>🐾Tem o prazo de 20 minutos antes de perder o acesso ao site</ul>
         <ul>🐾Terá direito a 3 dicas</ul>
-        
-    
-        <br>
-        <br>
-        <br>
-        <img src="GATO.png">
+        <img src="GATO.png" height="250" width="250">
         <div>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50" ></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
