--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Hello my husband</title>
     <style>
-        body {background: gray;}
-        
+        body {background: black;}
+        ul {color:white}
+        p {color:white}
+        h1 {color:white}
+        h2 {color:white}
+        h3 {color:white}
     </style>
 </head>
 <body>
