--- a/index.html
+++ b/index.html
@@ -24,18 +24,26 @@
         <h2> Regras</h2>
         <ul>🐾Todos os quadrados vão ter algo</ul>
         <ul>🐾Somente alguns deles vão ser úteis</ul>
-        <ul>🐾Tem o prazo de 20 minutos antes de perder o acesso ao site</ul>
+        <ul>🐾Tem o prazo de <b>20 minutos</b> antes de perder o acesso ao site</ul>
         <ul>🐾Terá direito a 3 dicas</ul>
-        <img src="GATO.png" height="250" width="250">
+       <div align="Center">
+        <h1>Hora de brincar</h1>
+        <p>Comece pelo primeiro quadrado gatinho!</p>
+      <img src="GATO.png" height="250" width="250" >
+      <br>
+      <p>Boa sorte!</p>
+    </div>
+<br>
+<br>
         <div>
-         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50" ></a>
+         <a href="https://docs.google.com/document/d/1Ob1LLCtO-tS6t54ovhJ1iIC6zfCUP7AuDIo06OSj0AQ/edit?usp=sharing"><img scr="rosa.png" width="50" height="50" ></a>
+         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://docs.google.com/document/d/1PNMQMlRFqbsTnmz3nYk6P5YTpKF5hqPZ4ih7nlVp78c/edit?usp=sharing"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
-         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
-         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
-         <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
+         <a href="https://docs.google.com/document/d/1LeYRC7cjXeIU-W-nBvKvrl-I8Yx4CmTasqKnfXuLhsk/edit?usp=sharing"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
          <a href="https://youtu.be/wLkfz10Srxw?si=Gi_phG08UHMhl5Ge"><img scr="rosa.png" width="50" height="50"></a>
